Closed Bug 123005 Opened 23 years ago Closed 23 years ago

[viewpoint ] mouse events don't pass correct wparam

Categories

(Core Graveyard :: Plug-ins, defect, P1)

x86
Windows NT

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: aberger, Assigned: peterl-bugs)

Details

Attachments

(1 file)

From Bugzilla Helper:
User-Agent: Mozilla/4.0 (compatible; MSIE 5.5; Windows NT 5.0)
BuildID:    0.9.4 branch

In mouse messages (eg mousemove), you set the following bits:
MK_SHIFT, MK_CONTROL
We also expect the following:
MK_LBUTTON, MK_RBUTTON, MK_MBUTTON
In short, you could probably just pass through the wparam from windows.



Reproducible: Always
Steps to Reproduce:
1.Unfortunately, this is tough to reproduce with our plugin.  You will need to 
install us AND adobe atmosphere.
2.I will try to put together an installer for you. Overall, it is probably 
easier if I test out the patch.
3.
arrrg...I had a patch for this, but the virus I caught this weekend ate it!
Let's try again....
Assignee: av → peterl
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: edt0.9.4
Adding KW
Status: NEW → ASSIGNED
This patch takes the same approach as the keyboard one in bug 122501 by
propigating the raw wParam down to the plugin. 

Ari, since there's no testcase here, can you be sure you test this out well. 

Thanks!
Keywords: patch
Priority: -- → P1
Target Milestone: --- → mozilla0.9.9
Comment on attachment 67759 [details] [diff] [review]
patch to propigate raw wParam to plugin for Windows

r=kmcclusk@netscape.com
Attachment #67759 - Flags: review+
Comment on attachment 67759 [details] [diff] [review]
patch to propigate raw wParam to plugin for Windows

sr=beard
Let's get a LOT of regression testing on known interactive plugins, Quicktime,
etc.
Attachment #67759 - Flags: superreview+
Patch in trunk to bake.

Seeking approval for branch.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Plus'ing. 
Shrirang, Btrent heads up.
Question: will this be hittin the trunk? 
Keywords: edt0.9.4edt0.9.4+
this fix should already be in today's trunk builds
approved for branch
fixed0.9.4
Keywords: fixed0.9.4
all important plugins have been tested on the trunk/branch(0206). I see no 
regressions... Ari, can you please verify the fix for this bug since there is no 
testcase here to check this one out. Thanks !!
v(stamp)
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: