Propigate wParam for mouse events directly to plugin bug 123005 r=kmcclusk sr=beard